--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
     <string name="app_name">SpeakOutLoudPilot</string>
+
+        <string-array name="locale_tags">
+            <item>CANADA</item>
+            <item>CANADA_FRENCH</item>
+            <item>CHINA</item>
+            <item>CHINESE</item>
+            <item>ENGLISH</item>
+            <item>FRANCE</item>
+            <item>FRENCH</item>
+            <item>GERMAN</item>
+            <item>GERMANY</item>
+            <item>ITALIAN</item>
+            <item>ITALY</item>
+            <item>JAPAN</item>
+            <item>JAPANESE</item>
+            <item>KOREA</item>
+            <item>KOREAN</item>
+            <item>PRC</item>
+            <item>ROOT</item>
+            <item>SIMPLIFIED_CHINESE</item>
+            <item>TAIWAN</item>
+            <item>TRADITIONAL_CHINESE</item>
+            <item>UK</item>
+            <item>US</item>
+        </string-array>
 </resources>
